--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES6",                          
-    "module": "CommonJS",                     
-    "outDir": "dist",                         
-    "rootDir": "src",                         
-    "strict": true,                           
-    "esModuleInterop": true,                  
+    "target": "ES2017",
+    "module": "CommonJS",
+    "outDir": "dist",
+    "rootDir": "src",
+    "strict": true,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "declaration": true,                     
-    "sourceMap": true                        
+    "declaration": true,
+    "sourceMap": true,
+    "lib": ["ES2017", "DOM"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/*.test.ts"]
