--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,9 +4,9 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Debug TSX Script (Watch Mode)",
+      "name": "Debug Current File",
       "runtimeExecutable": "npx",
-      "runtimeArgs": ["tsx", "--watch"],
+      "runtimeArgs": ["tsx"],
       "args": ["${file}"],
       "skipFiles": ["<node_internals>/**"],
       "outFiles": ["${workspaceFolder}/**/*.js"],
@@ -19,17 +19,55 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "Debug Example",
+      "runtimeExecutable": "npx",
+      "runtimeArgs": [
+        "tsx",
+        "--inspect"
+      ],
+      "args": ["${workspaceFolder}/src/examples/${input:exampleFile}.ts"],
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "sourceMaps": true,
+      "outFiles": [
+        "${workspaceFolder}/**/*.js"
+      ],
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "Debug Vitest Tests",
       "runtimeExecutable": "npx",
       "runtimeArgs": ["vitest", "--run", "--threads", "false"],
-      "args": ["${workspaceFolder}/path/to/your/test/file.test.ts"],
+      "args": ["${file}"],
       "skipFiles": ["<node_internals>/**"],
-      "outFiles": ["${workspaceFolder}/**/*.js"],
+      "sourceMaps": true
+    },
+    {
+      "name": "Attach to process",
+      "type": "node",
+      "request": "attach",
+      "port": 9229,
+      "processId": "${command:PickProcess}",
+      "skipFiles": ["<node_internals>/**"],
       "sourceMaps": true,
       "resolveSourceMapLocations": [
         "${workspaceFolder}/**",
         "!**/node_modules/**"
       ]
+    }
+  ],
+  "inputs": [
+    {
+      "id": "exampleFile",
+      "type": "pickString",
+      "description": "Which example would you like to debug?",
+      "options": ["basic", "complex", "djDeck", "trafficLight"]
     }
   ]
 }
