--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,13 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
-    "lib": ["ESNext", "DOM"],
-    "declaration": true,
-    "declarationMap": true,
-    "inlineSourceMap": true,
-    "outDir": "./dist",
-    "moduleResolution": "Node",
-    "strict": true,
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "allowJs": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist", "tests"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
