--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "prepublishOnly": "npm run lint && npm run test && npm run build",
-    "example:basic": "tsx --watch --inspect src/examples/basic.ts",
-    "example:complex": "tsx --watch --inspect src/examples/complex.ts",
-    "example:djDeck": "tsx --watch --inspect src/examples/djDeck.ts",
-    "example:trafficLight": "tsx --watch --inspect src/examples/trafficLight.ts",
-    "example:switch": "tsx --watch --inspect src/examples/switch.ts",
+    "example:basic": "tsx src/examples/basic.ts",
+    "example:complex": "tsx src/examples/complex.ts",
+    "example:djDeck": "tsx src/examples/djDeck.ts",
+    "example:trafficLight": "tsx src/examples/trafficLight.ts",
+    "example:switch": "tsx src/examples/switch.ts",
     "prepare": "npm run build"
   },
   "author": "Michael Beswick",
