--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,6 +3,8 @@
   "ts-node": {
     "esm": true,
     "experimentalSpecifier": true,
-    "transpileOnly": true
+    "transpileOnly": true,
+    "module": "commonjs",
+    "target": "es2019"
   }
 } 
